Inputs: fix placeholder and too big v-padding

--- a/src/components/App/_forms.scss
+++ b/src/components/App/_forms.scss
@@ -3,7 +3,7 @@
 // Placeholder and label colors
 
 .form-group {
-   ::placeholder, label {
+   label {
       color: $light-blue;
    }
 }
@@ -11,6 +11,6 @@
 // Input, select, textarea
 
 .form-control {
-   padding: 25px 17px;
-   color: $light-blue;
+   padding: 8px 17px;
+   height: 52px;
 }
